# auv_simulation

./: .gitignore  README.md
connection/: bridge.py  codes.py  comm.py
scripts/: bridge.py
simulation/Assets/Models/Environment/: Pool.prefab
simulation/Assets/Models/Materials/: line.mat  shapes.mat  walls.mat  water.mat
simulation/Assets/Models/Missions/: Line Mission.prefab
simulation/Assets/Scenes/: PathFindTest.unity  SampleScene.unity  gui.unity
simulation/Assets/Scripts/: CameraPoser.cs  EnvironmentTcpSubscriber.cs  SonarRayCast.cs  SonarTCPPublisher.cs  bridge.py  test.py
simulation/Assets/Scripts/Missions/: AsteroidFieldGenerator.cs
simulation/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
simulation/ProjectSettings/: ProjectSettings.asset
test/Model/: CMakeLists.txt  Dockerfile  environment.yml  notes  testh.py  visualize.py
test/Model/include/: data.hpp  environment.h  helpers.hpp  nlmpc.h  vehicle_model.h  visualization.hpp
test/Model/others/: generate.cpp  metrics.hpp  test.cpp  visualized.cpp
test/Model/src/: environment_astar.cu  environment_global.cu  environment_helper.cpp  environment_map.cu  main.cpp  nlmpc.cpp  vehicle_model.cpp
test/il/: casadi_mpc.hpp  config.json  csv_to_hdf.py  data_generate.cpp  show_hdf.py  train.py
test/il-map/: EnvironmentMap.cu  EnvironmentMap.h  main.cpp  visualize.py
test/map-entegrated-mpc/: environment.h  environment_astar.cu  environment_global.cu  environment_map.cu  main  main.cpp  nlmpc.cpp  nlmpc.h  oldmain.cpp  reference_history.txt  render.py  state_history.txt  validation.cpp  vehicle_model.h  visualize.py
test/mpc/: config.json  model.py  model_test.cpp  mpc.cpp  mpc.py  mpc0.cpp  mpc1.cpp  mpc2.cpp  mpc3.cpp  mpc4.cpp  mpc_render.py  pid.py  quad_sim.cpp  render.py  test.cpp
test/ppo/: environment.py  test.py  train.py
